split out css. still need to lazy load yt vidz

--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,6 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
 		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css")
-		link(rel="stylesheet", href="http://d2gnz4tcuzmut6.cloudfront.net/styles/daily.css")
 		link(rel="stylesheet", href="css/main.css")
 
 		title Éliane Radigue: Modulations in Chiaroscuro
@@ -71,7 +70,7 @@ html(lang="en")
 						In 1963, however, Radigue went to New York with Arman and was inspired anew. She met composer James Tenney, who guided her through the New York avant-garde scene and introduced her to established artists such as Philip Corner, Philip Glass, Steve Reich and Charlemagne Palestine. Radigue at last felt valued, and not just as a foil for her husband. “There existed an extraordinary creative profusion at the time,” she confirms. “It was the era of Yvonne Reiner, Merce Cunningham, John Cage, Warhol’s Factory... Exchanges occurred in all directions and in all areas, which did not prevent me from attending concerts at Carnegie Hall and the Metropolitan, because I had never lost track of classical music, which could still transport me into raptures.”
 
 
-					.video-outer
+					.video-outer.video-center
 						.video-inner
 							iframe(src="https://www.youtube.com/embed/T3ZgIBOPR0o", data-src="https://www.youtube.com/embed/T3ZgIBOPR0o")
 
@@ -84,7 +83,10 @@ html(lang="en")
 					p.
 						This unpleasant experience nevertheless made it possible for Radigue to finish her first acousmatic versions and initiate her own language using the Larsen effect or feedback (Jouet Electronique, 1967), as well as her sound library collected in Nice (Elemental I, 1968).
 
-					//-video block
+					.video-outer.video-right
+						.video-inner
+							iframe(src="https://www.youtube.com/embed/zYx2RMb5D3A", data-src="https://www.youtube.com/embed/zYx2RMb5D3A")
+
 					p.
 						Feedback, which she wanted to find a way to tame, was the subject of several other “wild” compositions (Vice Versa, etc. Usral, Stress Osaka, Omnht) that play on the nuances of infinitesimal timbres. “When one maintains the balance between a microphone and a loudspeaker, there is a very precise limit in order to make it change ever so slightly,” she points out. “If you go too near to the speaker, everything collapses. If one moves too far away, it disappears. It was a technique that not only required the ability to listen, but gestural patience.” This “listening skill” was a recurring term in the Radigue lexicon, prefiguring the concept of “deep listening,” expressed by Pauline Oliveros some years later.
 
@@ -108,6 +110,10 @@ html(lang="en")
 					p.
 						Around this time, Radigue sensed that electronic synthesis, which was still emerging, would grant her the keys to a new language. <em>Chry-ptus</em>, composed entirely on the Buchla, was the first significant concert of her life. It was presented at Columbus Circle in New York in April 1971 before forty or so thunderstruck people.
 
+					.video-outer.video-right
+						.video-inner
+							iframe(src="https://www.youtube.com/embed/IPXt4mqAQr4", data-src="https://www.youtube.com/embed/IPXt4mqAQr4")
+
 					p.
 						After some trial and error on other synthesizers like the EML ElectroComp or the Moog, she eventually settled on the ARP 2500. “When I used to work with the Buchla and I turned the knobs, sometimes to a hair’s breadth, it was very tricky. If I made the slightest false move, disconnecting one ever so marginally, everything would evaporate. On the other hand, the ARP offered me an immediate reading, since the oscillators going into a particular module or output were all in front of me. Except that the switches had one flaw: they hissed. But, for me, that is precisely what procured this richness and subtlety of sound. The Moog and Buchla are wonderful instruments, but conversely, their sonority is very clear and metallic.”
 
@@ -119,11 +125,21 @@ html(lang="en")
 					p.
 						In 1973, Radigue produced <em>ψ 847</em>, another pivotal piece. In this pivotal 80-minute composition, she elucidated all that would become central in her music: the sweeping waves, the breath, intervals, and resonances. “The idea of this piece was to take a body of sound that would have been like a cone from which I was pulling the threads one by one to exploit them... Even if you do not necessarily hear it in the end, I must always have this vision, the primary image that serves as a score.”
 
+					.video-outer.video-right
+						.video-inner
+							iframe(src="https://www.youtube.com/embed/94GKuHU3E1k", data-src="https://www.youtube.com/embed/94GKuHU3E1k")
+
 					p.
 						Mesmerizing and contemplative, <em>ψ 847</em> seems to “seep from the walls,” according to composer Tom Johnson. No brutal haste, no breaks, no narration, but instead a vibratory intensity that commands extreme concentration. The same year, she completed two shorter pieces – <em>Transamorem-Transmortem</em> and <em>Biogenesis</em> – based on the heartbeats of her son, her pregnant daughter and her unborn grandson, addressing consciousness as much as the ear.
 
+					.video-outer.video-right
+						.video-inner
+							iframe(src="https://www.youtube.com/embed/0kEIKK_Jzr0", data-src="https://www.youtube.com/embed/0kEIKK_Jzr0")
+
 					p.
 						After converting to Buddhism in 1974, under the encouragement of Terry Riley, her music entered into resonance with her spiritual discipline, latent since her beginnings. Thus, she introduced the <em>Adnos</em> trilogy (1974-1980-1982), a cornerstone of the electronic avant-garde, with a metaphor that resonates like a haiku: “to displace stones in the river bed does not affect the course of water, but rather modifies the way the water flows.”
+
+
 
 					p.
 						Her devotion to Tibetan Buddhism became the guiding thread of her work from the ’80s onwards, starting with <em>Les Chants de Milarepa</em> in 1983, where the precepts of the Lama Kunga Rinpoche are recited by Robert Ashley, and <em>Jetsun Mila</em> (1986), inspired by the life of the great yogi and poet Milarepa who lived in Tibet in the 11th century. The <em>Trilogie de la Mort</em> – composed of <em>Kyema</em> (1988), <em>Kailasha</em> (1991) and <em>Koumé</em> (1993) – marked a milestone in her life, as much for the compositional process as the tragic episode to which the work was related: the loss of her son, who died aged 34 in a car accident, and the passing of her spiritual master, the Lama Kunga Rinpoche.
