--- a/app/index.jade
+++ b/app/index.jade
@@ -71,8 +71,10 @@ html(lang="en")
 
 
 					.video-outer.video-center
-						.video-inner
-							iframe(src="https://www.youtube.com/embed/T3ZgIBOPR0o", data-src="https://www.youtube.com/embed/T3ZgIBOPR0o")
+						.video-poster
+							img(src="http://image.redbull.com/rbx00786/0100/0/486/Screen%20Shot%202015-11-13%20at%204.35.07%20PM.c6d4ff6c.png")
+						.video-inner(data-src="https://www.youtube.com/embed/T3ZgIBOPR0o")
+						.video-caption Pierre Henry - L’Apocalypse de Jean
 
 
 					.topic Listening to feedback
@@ -84,8 +86,11 @@ html(lang="en")
 						This unpleasant experience nevertheless made it possible for Radigue to finish her first acousmatic versions and initiate her own language using the Larsen effect or feedback (Jouet Electronique, 1967), as well as her sound library collected in Nice (Elemental I, 1968).
 
 					.video-outer.video-right
-						.video-inner
-							iframe(src="https://www.youtube.com/embed/zYx2RMb5D3A", data-src="https://www.youtube.com/embed/zYx2RMb5D3A")
+						.video-poster
+							img(src="http://image.redbull.com/rbx00786/0100/0/486/Screen%20Shot%202015-11-13%20at%204.36.27%20PM.d5e7008d.png")
+						.video-inner(data-src="https://www.youtube.com/embed/zYx2RMb5D3A")
+						.video-caption Éliane Radigue - Backward 9,5 (<em>Vice Versa</em>)
+
 
 					p.
 						Feedback, which she wanted to find a way to tame, was the subject of several other “wild” compositions (Vice Versa, etc. Usral, Stress Osaka, Omnht) that play on the nuances of infinitesimal timbres. “When one maintains the balance between a microphone and a loudspeaker, there is a very precise limit in order to make it change ever so slightly,” she points out. “If you go too near to the speaker, everything collapses. If one moves too far away, it disappears. It was a technique that not only required the ability to listen, but gestural patience.” This “listening skill” was a recurring term in the Radigue lexicon, prefiguring the concept of “deep listening,” expressed by Pauline Oliveros some years later.
@@ -111,8 +116,10 @@ html(lang="en")
 						Around this time, Radigue sensed that electronic synthesis, which was still emerging, would grant her the keys to a new language. <em>Chry-ptus</em>, composed entirely on the Buchla, was the first significant concert of her life. It was presented at Columbus Circle in New York in April 1971 before forty or so thunderstruck people.
 
 					.video-outer.video-right
-						.video-inner
-							iframe(src="https://www.youtube.com/embed/IPXt4mqAQr4", data-src="https://www.youtube.com/embed/IPXt4mqAQr4")
+						.video-poster
+							img(src="http://image.redbull.com/rbx00786/0100/0/486/Screen%20Shot%202015-11-13%20at%204.40.22%20PM.b7ca2219.png")
+						.video-inner(data-src="https://www.youtube.com/embed/IPXt4mqAQr4")
+						.video-caption Éliane Radigue - Chry-ptus
 
 					p.
 						After some trial and error on other synthesizers like the EML ElectroComp or the Moog, she eventually settled on the ARP 2500. “When I used to work with the Buchla and I turned the knobs, sometimes to a hair’s breadth, it was very tricky. If I made the slightest false move, disconnecting one ever so marginally, everything would evaporate. On the other hand, the ARP offered me an immediate reading, since the oscillators going into a particular module or output were all in front of me. Except that the switches had one flaw: they hissed. But, for me, that is precisely what procured this richness and subtlety of sound. The Moog and Buchla are wonderful instruments, but conversely, their sonority is very clear and metallic.”
@@ -126,15 +133,21 @@ html(lang="en")
 						In 1973, Radigue produced <em>ψ 847</em>, another pivotal piece. In this pivotal 80-minute composition, she elucidated all that would become central in her music: the sweeping waves, the breath, intervals, and resonances. “The idea of this piece was to take a body of sound that would have been like a cone from which I was pulling the threads one by one to exploit them... Even if you do not necessarily hear it in the end, I must always have this vision, the primary image that serves as a score.”
 
 					.video-outer.video-right
-						.video-inner
-							iframe(src="https://www.youtube.com/embed/94GKuHU3E1k", data-src="https://www.youtube.com/embed/94GKuHU3E1k")
+						.video-poster
+							img(src="http://image.redbull.com/rbx00786/0100/0/486/Screen%20Shot%202015-11-13%20at%204.42.05%20PM.dc4648ab.png")
+						.video-inner(data-src="https://www.youtube.com/embed/94GKuHU3E1k")
+						.video-caption Éliane Radigue - ψ 847 (version concert)
 
 					p.
 						Mesmerizing and contemplative, <em>ψ 847</em> seems to “seep from the walls,” according to composer Tom Johnson. No brutal haste, no breaks, no narration, but instead a vibratory intensity that commands extreme concentration. The same year, she completed two shorter pieces – <em>Transamorem-Transmortem</em> and <em>Biogenesis</em> – based on the heartbeats of her son, her pregnant daughter and her unborn grandson, addressing consciousness as much as the ear.
 
 					.video-outer.video-right
-						.video-inner
-							iframe(src="https://www.youtube.com/embed/0kEIKK_Jzr0", data-src="https://www.youtube.com/embed/0kEIKK_Jzr0")
+						.video-poster
+							img(src="http://image.redbull.com/rbx00786/0100/0/486/Screen%20Shot%202015-11-13%20at%204.43.12%20PM.859a0770.png")
+						.video-inner(data-src="https://www.youtube.com/embed/0kEIKK_Jzr0")
+						.video-caption Eliane Radigue - Adnos I (Excerpt)
+
+
 
 					p.
 						After converting to Buddhism in 1974, under the encouragement of Terry Riley, her music entered into resonance with her spiritual discipline, latent since her beginnings. Thus, she introduced the <em>Adnos</em> trilogy (1974-1980-1982), a cornerstone of the electronic avant-garde, with a metaphor that resonates like a haiku: “to displace stones in the river bed does not affect the course of water, but rather modifies the way the water flows.”
