--- a/app/styles/modules/_body.scss
+++ b/app/styles/modules/_body.scss
@@ -187,7 +187,6 @@
 			height: auto;
 			position: relative;
 			padding: 5px;
-			background: linear-gradient(red, blue) no-repeat;
 			&.video-right{
 				@include mq("large"){
 					float: right;
@@ -198,6 +197,45 @@
 			@include mq("large"){
 				width: 90%;
 				margin-left: 5%;
+			}
+
+			.video-caption{
+				font-family: 'maison';
+				font-size: 0.75em;
+				padding-top: 20px;
+				display: block;
+			}
+
+			.video-poster{
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 90%;
+				overflow: hidden;
+				img{
+					width: 100%;
+					margin-top: -10%;
+				}
+				&:before{
+					border: 4px solid $text;
+					color: $text;
+					@include transform(translateX(-50%) translateY(-50%));
+					content: '▶︎';
+					position: absolute;
+					left: 50%;
+					top: 50%;
+					z-index: 500;
+					font-size: 45px;
+					line-height: 2;
+					padding-left: 9px;
+					width: 71px;
+					display: block;
+					height: 80px;
+					text-align: center;
+					border-radius: 50%;
+					pointer-events: none;
+				}
 			}
 			.video-inner{
 				width: 100%;
