--- a/app/index.jade
+++ b/app/index.jade
@@ -2,12 +2,57 @@ doctype html
 html(lang="en")
 	head
 		meta(charset="utf-8")
+		meta(name="robots", content="index,follow")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 
 		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css")
 		link(rel="stylesheet", href="css/main.css")
 
 		title Éliane Radigue: Modulations in Chiaroscuro
+
+		meta(itemprop="name", content="Éliane Radigue: Modulations in Chiaroscuro | Red Bull Music Academy Daily")
+		meta(itemprop="description", content="XXXXXXXXXXXXXXXXX")
+		meta(itemprop="image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+
+		meta(name="description", content="XXXXXXXXXXX")
+
+		//-FB
+		meta(property="og:title", content="Éliane Radigue: Modulations in Chiaroscuro | Red Bull Music Academy Daily")
+		meta(property="og:type", content="article")
+		meta(property="og:url", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/")
+		meta(property="og:image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+		meta(property="og:site_name", content="Red Bull Music Academy Daily")
+		meta(property="fb:admins", content="100006789941377")
+
+		//-Twitter
+		meta(name="twitter:card", content="summary_large_image")
+		meta(name="twitter:site", content="@rbma")
+		meta(name="twitter:title", content="Éliane Radigue: Modulations in Chiaroscuro | RBMA Daily")
+		meta(name="twitter:description", content="XXXXXXXX")
+		meta(name="twitter:creator", content="@rbma")
+		meta(name="twitter:image:src", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+
+
+		link(rel="author", href="https://plus.google.com/+RBMA/posts")
+		link(rel="publisher", href="https://plus.google.com/+RBMA")
+
+		link(rel="apple-touch-icon", sizes="57x57", href="icons/apple-icon-57x57.png")
+		link(rel="apple-touch-icon", sizes="60x60", href="icons/apple-icon-60x60.png")
+		link(rel="apple-touch-icon", sizes="72x72", href="icons/apple-icon-72x72.png")
+		link(rel="apple-touch-icon", sizes="76x76", href="icons/apple-icon-76x76.png")
+		link(rel="apple-touch-icon", sizes="114x114", href="icons/apple-icon-114x114.png")
+		link(rel="apple-touch-icon", sizes="120x120", href="icons/apple-icon-120x120.png")
+		link(rel="apple-touch-icon", sizes="144x144", href="icons/apple-icon-144x144.png")
+		link(rel="apple-touch-icon", sizes="152x152", href="icons/apple-icon-152x152.png")
+		link(rel="apple-touch-icon", sizes="180x180", href="icons/apple-icon-180x180.png")
+		link(rel="icon", type="image/png", sizes="192x192", href="icons/android-icon-192x192.png")
+		link(rel="icon", type="image/png", sizes="32x32", href="icons/favicon-32x32.png")
+		link(rel="icon", type="image/png", sizes="96x96", href="icons/favicon-96x96.png")
+		link(rel="icon", type="image/png", sizes="16x16", href="icons/favicon-16x16.png")
+		link(rel="manifest", href="icons/manifest.json")
+		meta(name="msapplication-TileColor" content="#ffffff")
+		meta(name="msapplication-TileImage", content="icons/ms-icon-144x144.png")
+		meta(name="theme-color", content="#ffffff")
 
 		body
 
@@ -26,7 +71,7 @@ html(lang="en")
 				.title
 					.title-inner
 						h1 Éliane Radigue: Modulations in Chiaroscuro
-						p <span class="credit">Story by: </span> Julien Bécourt
+						p <span class="credit">Story by: </span> <a href="http://daily.redbullmusicacademy.com/author/julien-becourt">Julien Bécourt</a>
 
 				.main
 					p.intro.
@@ -42,7 +87,7 @@ html(lang="en")
 
 
 					.imgL
-						img.wavy(src="http://image2.redbull.com/rbx00786/0001/1/300/486/Nice%201955-avec%20Yves%20Klein.a171ee7a.jpg")
+						img.wavy(src="http://image2.redbull.com/rbx00786/0001/1/300/486/Nice%201955-avec%20Yves%20Klein.a171ee7a.jpg", alt="Éliane Radigue appears to be leaning against a wall, her body protruding at approximately at 60-degree angle. Éliane has a cigar in her mouth, which contrasts nicely with the string of pearls around her neck.")
 						.caption Nice 1955, with Yves Klein Arman <span class="credit">Arman</span>
 					p.
 						Stifled by an authoritarian mother, she fled to Nice in the summer of 1950. She was just 19 years old. There she met Arman, an avant-garde artist who was part of the Nouveaux Réaliste movement, alongside artists such as Yves Klein, Jacques de la Villeglé, Daniel Spoerri, Ben Vautier and Robert Filliou. Fascinated by the exciting bohemian life beside the Mediterranean, she soon moved in with the famous sculptor and they were married in 1954 and quickly had three children.
@@ -55,7 +100,7 @@ html(lang="en")
 
 
 					.imgR
-						img(src="http://image2.redbull.com/rbx00786/0001/1/300/486/6-environs%20de%20Nice-cr%C3%A9dit-Arman.4b3345b3.jpg")
+						img(src="http://image2.redbull.com/rbx00786/0001/1/300/486/6-environs%20de%20Nice-cr%C3%A9dit-Arman.4b3345b3.jpg", alt="Éliane Radigue ventures out into nature, in what looks like a densely wooded pine forest with numerous ferns protruding waist high. Éliane wears her hair down, a black blouse and ankle length skirt. There are no animals visible in the photograph, but based on the surroundings, there are most likely animals nearby.")
 						.caption Éliane Radigue in Nice <span class="credit">Julien Sirjacq</span>
 
 					.topic From Studio d’Essai to New York
@@ -104,7 +149,7 @@ html(lang="en")
 
 					//- big arp image
 					.imgCenter
-						img(src="http://image3.redbull.com/rbx00786/0001/1/1280/486/9a-Paris%201971-cr%C3%A9dit-Arman.091efb74.jpg")
+						img(src="http://image3.redbull.com/rbx00786/0001/1/1280/486/9a-Paris%201971-cr%C3%A9dit-Arman.091efb74.jpg", alt="Éliane Radigue is seated with her back to the viewer, facing a large vertically mounted synthesizer. There are numerous knobs and wires protuding from the synthesizers face. Her hands are both occupied by these knobs; one left, and one right, with her right hand positioned slightly higher than her left.")
 						.caption Paris 1971 <span class="credit">Arman</span>
 
 					.topic Analog synthesis
@@ -162,6 +207,10 @@ html(lang="en")
 
 					.topic From the electronic to the acoustic
 
+					.imgL
+						img(src="images/eliane-present.jpg", alt="Éliane Radigue portrait photograph. Éliane is wearing her hair pulled back, a black shirt and a wonderful scarf with blue, black and roseberry pink accents.")
+						.caption Éliane Radigue
+
 					p.
 						If continuous sounds can be generated synthetically, then why not by humans playing instruments? In 2003, at the request of the noise composer, Kasper T. Toeplitz, Radigue devoted herself to her first piece with “traditional” instruments, <em>Elemental II</em>, which Toeplitz performed on the electric bass connected to MAX / MSP software. She repeated the experiment in 2004 with the cellist Charles Curtis, who encouraged her to abandon electronics and focus exclusively on acoustic sounds. She definitively separated from the ARP – what she still calls her “other half” – in 2006.
 
@@ -173,6 +222,10 @@ html(lang="en")
 
 					p.
 						<em>The author would like to thank Julien Sirjacq, Manu Holterbach and Maxime Guitton for their help with this piece.</em>
+
+					p.end-social
+						span.share-icon.twitter(data-site="twitter")
+						span.share-icon.facebook(data-site="facebook")
 
 
 					footer
@@ -236,6 +289,57 @@ html(lang="en")
 								a(href="http://www.instagram.com/redbullmusicacademy")
 									.social-icon.instagram
 
+							.footer-legal
+								p
+									span © Red Bull 2015 |
+									span 
+										a(href="http://www.redbullmusicacademy.com/p/terms") Terms & Conditions |
+									span
+										a(href="http://www.redbull.com/en/data-privacy-policy") Privacy Policy |
+									span
+										a(href="http://www.redbullmusicacademy.com/p/legal-notice") Legal Notice |
+									span
+										a(href="http://www.redbullmusicacademy.com/p/contact-us") Contact Us |
+									span
+										a(href="http://www.redbullmusicacademy.com/p/newsletter") Newsletter
+
 
 			script(src="lib/glfx.js")
 			script(src="js/bundle.js")
+
+			//-GA
+			script.
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+				ga('create', 'UA-21347469-1', 'auto');
+				ga('send', 'pageview');
+
+			//-Webtrekk 1
+			script.
+				var edWrapperNameSpace = {};
+				edWrapperNameSpace.aGTM = [
+				"GTM-LVJ5",     // hq
+				"GTM-7W7M",     // hq
+				"GTM-HPZK",     // hq
+				"GTM-WWXSFT"    // property
+				];
+				var edWrapper = [];
+
+			//- Webtrekk 2
+			script.
+				edWrapperNameSpace.sVers = -1;
+				edWrapperNameSpace.aInitialInnerWrapper = [["downloads.redbull.com/webtrekk/innereWrapper/gtm/innerWrapper_gtm.js",false]];
+				edWrapperNameSpace.sWrapperSrc = ["downloads.redbull.com/webtrekk/edAnalyticsWrapper.js","downloads.redbull.com/webtrekk/confWrapper.js"];
+
+				(function (sVarName) {
+					window.edWrapperNameSpace.sEdWrapperObjectName = sVarName; window[sVarName] = window[sVarName] || [];
+					var script = document.createElement('script'); script.type = 'text/javascript';script.asyn = false; 
+					script.src = ('https:' == document.location.protocol ? 'https://' : 'http://')+edWrapperNameSpace.sWrapperSrc[0] + "?v=" + edWrapperNameSpace.sVers;
+					var script2 = document.getElementsByTagName('script')[0]; script2.parentNode.insertBefore(script, script2);
+				})("edWrapper");
+
+			script.
+				edWrapper.push( [ 'trackPageView' , false , {1:'IntMS' , 2:'IntMS - int' , 3:'IntMS - int - Red Bull Music Academy'} , true ] );
+				edWrapper.push( [ 'trackPageVar' , 'Language' , 'en'] );
+				edWrapper.push( [ 'trackPageVar' , 'Domain incl. Subdomain' , window.location.hostname] );
+				edWrapper.push( [ 'trackPageVar' , 'Type' , 'IntMS'] );
+				edWrapper.push(['submit']);
