--- a/app/styles/base/_typo.scss
+++ b/app/styles/base/_typo.scss
@@ -63,8 +63,11 @@ h1,h2,h3,h4,h5{
 }
 
 p{
-	font-size: 1.25em;
-	line-height: 2;
+	font-size: 1em;
+	line-height: 1.5;
+	@include mq("large"){
+		font-size: 1.25em;
+	}
 }
 
 a{
