--- a/app/styles/modules/_body.scss
+++ b/app/styles/modules/_body.scss
@@ -68,6 +68,10 @@
 			width: 60%;
 			margin: 25px 20%;	
 		}
+		@include mq("widescreen"){
+			width: 50%;
+			margin: 25px 25%;
+		}
 		.intro{
 			font-weight: bold;
 			font-size: 2em;
@@ -83,7 +87,13 @@
 
 		p{
 			margin: 25px auto;
+			font-family: 'Portrait';
 			
+		}
+
+		.caption{
+			font-family: 'maison';
+			font-size: 0.75em;
 		}
 
 		.imgL{
@@ -99,14 +109,14 @@
 			img{
 				width: 100%;
 				padding: 5px;
-				border: 5px solid blue;
+				border: 25px solid blue;
 				border-image: linear-gradient(to bottom, blue 0%, red 100%);
 				border-image-slice: 1;
 			}
 			.caption{
 				margin-bottom: 10px;
 				text-align: center;
-				font-size: 0.75em;
+				color: $text;
 				@include mq("large"){
 					margin-top: 10px;
 				}
@@ -132,15 +142,14 @@
 			img{
 				width: 100%;
 				padding: 5px;
-				border: 5px solid blue;
+				border: 25px solid blue;
 				border-image: linear-gradient(to bottom, blue 0%, red 100%);
 				border-image-slice: 1;
 			}
 			.caption{
 				margin-bottom: 10px;
 				text-align: center;
-				font-size: 0.75em;
-				color: white;
+				color: $text;
 				@include mq("large"){
 					margin-top: 10px;
 				}
@@ -249,6 +258,26 @@
 					position: absolute;
 					top: 0;
 					left: 0;
+				}
+			}
+		}
+
+
+		.end-social{
+			width: 100%;
+			height: 50px;
+			text-align: left;
+			.share-icon{
+				display: inline-block;
+				width: 50px;
+				height: 50px;
+				margin: 0 5px;
+				cursor: pointer;
+				&.twitter{
+					background: url(../images/twitter.svg) no-repeat center center;
+				}
+				&.facebook{
+					background: url(../images/facebook.svg) no-repeat center center;
 				}
 			}
 		}
