--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -15,7 +15,6 @@ nav.main-nav{
     background: rgba(0,0,0,0.5);
     border-bottom: 1px white;
     color: $text;
-    opacity: 0;
     z-index: 999;
     background: $background;
     font-size: 1.5em;
@@ -23,7 +22,6 @@ nav.main-nav{
     top: 0;
     left: 0;
     width: 100%;
-    @include transition(opacity 0.2s linear);
     @include fast();
     .logo{
         width: 60px;
@@ -39,7 +37,7 @@ nav.main-nav{
     }
     .text{
         display: none;
-        opacity: 0;
+        text-decoration: none;
         @include mq("medium"){
             display: block;
         }
@@ -57,54 +55,35 @@ nav.main-nav{
         height: 100%;
     }
 
-    .share{
-        .share-icon{
-            width: 25px;
-            height: 25px;
-            &.twitter{
-                background-image: url(http://daily.redbullmusicacademy.com/images/share/twitter.c26710dd.svg);
-            }
+    .share-icon{
+        width: 40px;
+        height: 40px;
+        padding-left: 25px;
+        &.twitter{
+            background: url(../images/twitter.svg) no-repeat center center;
+            background-size: 80%;
+        }
+        &.facebook{
+            background: url(../images/facebook.svg) no-repeat center center;
+            background-size: 80%;
         }
     }
+}
 
+
+// ------------------------------------------------
+// Headroom
+//
+.headroom{
+    @include transition(all 0.3s linear);
     &.headroom--pinned{
-        opacity: 1;
-        .text{
-        	opacity: 1;
-        }
-        .logo{
-        	opacity: 1;
-        }
-        .social{
-        	opacity: 1;
-        }
+        @include transform(translateY(0) translateZ(0));
     }
+    &.headroom--unpinned,
     &.headroom--top{
-        opacity: 0;
-        .text{
-        	opacity: 0;
-        }
-        .logo{
-        	opacity: 0;
-        }
-        .social{
-        	opacity: 0;
-        }
+        @include transform(translateY(-100%) translateZ(0));
     }
 
 }
 
 
-.share-icon{
-    width: 20px;
-    height: 20px;
-    padding-left: 25px;
-    &.twitter{
-        background: url(../images/twitter.svg) no-repeat center center;
-        background-size: 80%;
-    }
-    &.facebook{
-        background: url(../images/facebook.svg) no-repeat center center;
-        background-size: 80%;
-    }
-}
