--- a/app/styles/modules/_footer.scss
+++ b/app/styles/modules/_footer.scss
@@ -8,9 +8,14 @@ footer{
 	color: $text;
 	font-family: 'maison', Helvetica, Arial;
 	margin-top: 10em;
+	margin-left: 5%;
 	img.footer-logo{
 		width: 90%;
 		margin-left: 5%;
+		@include mq("medium"){
+			width: 75%;
+			margin-left: 12.5%;
+		}
 		@include mq("large"){
 			width: 60%;
 			margin-left: 20%;
