--- a/app/index.jade
+++ b/app/index.jade
@@ -8,16 +8,17 @@ html(lang="en")
 		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css")
 		link(rel="stylesheet", href="css/main.css")
 
-		title Éliane Radigue: Modulations in Chiaroscuro
+		title Éliane Radigue: The Mysterious Power Of The Infinitesimal
 
-		meta(itemprop="name", content="Éliane Radigue: Modulations in Chiaroscuro | Red Bull Music Academy Daily")
+		meta(itemprop="name", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | Red Bull Music Academy Daily")
 		meta(itemprop="description", content="XXXXXXXXXXXXXXXXX")
 		meta(itemprop="image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
 
 		meta(name="description", content="XXXXXXXXXXX")
 
 		//-FB
-		meta(property="og:title", content="Éliane Radigue: Modulations in Chiaroscuro | Red Bull Music Academy Daily")
+		meta(property="og:title", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | Red Bull Music Academy Daily")
+		meta(property="og:description", content="An in-depth look at the music of the early electroacoustic composer.")
 		meta(property="og:type", content="article")
 		meta(property="og:url", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/")
 		meta(property="og:image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
@@ -27,8 +28,8 @@ html(lang="en")
 		//-Twitter
 		meta(name="twitter:card", content="summary_large_image")
 		meta(name="twitter:site", content="@rbma")
-		meta(name="twitter:title", content="Éliane Radigue: Modulations in Chiaroscuro | RBMA Daily")
-		meta(name="twitter:description", content="XXXXXXXX")
+		meta(name="twitter:title", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | RBMA Daily")
+		meta(name="twitter:description", content="An in-depth look at the music of the electroacoustic composer")
 		meta(name="twitter:creator", content="@rbma")
 		meta(name="twitter:image:src", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
 
@@ -88,7 +89,7 @@ html(lang="en")
 
 					.imgL
 						img.wavy(src="http://image2.redbull.com/rbx00786/0001/1/300/486/Nice%201955-avec%20Yves%20Klein.a171ee7a.jpg", alt="Éliane Radigue appears to be leaning against a wall, her body protruding at approximately at 60-degree angle. Éliane has a cigar in her mouth, which contrasts nicely with the string of pearls around her neck.")
-						.caption Nice 1955, with Yves Klein Arman <span class="credit">Arman</span>
+						.caption Nice 1955, with Yves Klein <span class="credit">Arman</span>
 					p.
 						Stifled by an authoritarian mother, she fled to Nice in the summer of 1950. She was just 19 years old. There she met Arman, an avant-garde artist who was part of the Nouveaux Réaliste movement, alongside artists such as Yves Klein, Jacques de la Villeglé, Daniel Spoerri, Ben Vautier and Robert Filliou. Fascinated by the exciting bohemian life beside the Mediterranean, she soon moved in with the famous sculptor and they were married in 1954 and quickly had three children.
 
@@ -100,8 +101,8 @@ html(lang="en")
 
 
 					.imgR
-						img(src="http://image2.redbull.com/rbx00786/0001/1/300/486/6-environs%20de%20Nice-cr%C3%A9dit-Arman.4b3345b3.jpg", alt="Éliane Radigue ventures out into nature, in what looks like a densely wooded pine forest with numerous ferns protruding waist high. Éliane wears her hair down, a black blouse and ankle length skirt. There are no animals visible in the photograph, but based on the surroundings, there are most likely animals nearby.")
-						.caption Éliane Radigue in Nice <span class="credit">Julien Sirjacq</span>
+						img(src="images/radigue-shell.jpg")
+						.caption Éliane Radigue <span class="credit">Jacques Brisseaut</span>
 
 					.topic From Studio d’Essai to New York
 
@@ -207,12 +208,15 @@ html(lang="en")
 
 					.topic From the electronic to the acoustic
 
-					.imgL
-						img(src="images/eliane-present.jpg", alt="Éliane Radigue portrait photograph. Éliane is wearing her hair pulled back, a black shirt and a wonderful scarf with blue, black and roseberry pink accents.")
-						.caption Éliane Radigue
+					//- .imgL
+					//- 	img(src="images/eliane-present.jpg", alt="Éliane Radigue portrait photograph. Éliane is wearing her hair pulled back, a black shirt and a wonderful scarf with blue, black and roseberry pink accents.")
+					//- 	.caption Éliane Radigue
 
 					p.
 						If continuous sounds can be generated synthetically, then why not by humans playing instruments? In 2003, at the request of the noise composer, Kasper T. Toeplitz, Radigue devoted herself to her first piece with “traditional” instruments, <em>Elemental II</em>, which Toeplitz performed on the electric bass connected to MAX / MSP software. She repeated the experiment in 2004 with the cellist Charles Curtis, who encouraged her to abandon electronics and focus exclusively on acoustic sounds. She definitively separated from the ARP – what she still calls her “other half” – in 2006.
+
+					.pullL
+						h3 With these wonderful musicians, I found what I had tried to accomplish alone with my ARP.
 
 					p.
 						Accordingly, brass and strings have enriched her music with new timbres and resonances, renewing her creative process. The <em>Naldjorlak</em> and <em>Occam</em> series reflect this increasingly organic approach to sound. She completed Occam Ocean in 2015; her first orchestral piece, performed for the first time last October at the Eglise St Merry in Paris. “It’s an entirely natural and normal continuity,” she beams. “Someone once said I was trying to do with acoustic music what I had tried to do with electronic music, but it’s the exact opposite! With these wonderful musicians, I found what I had tried to accomplish alone with my ARP. What was important was to restore the spirit.”
