--- a/app/index.jade
+++ b/app/index.jade
@@ -11,17 +11,17 @@ html(lang="en")
 		title Éliane Radigue: The Mysterious Power Of The Infinitesimal
 
 		meta(itemprop="name", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | Red Bull Music Academy Daily")
-		meta(itemprop="description", content="XXXXXXXXXXXXXXXXX")
-		meta(itemprop="image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+		meta(itemprop="description", content="An in-depth look at the music of the early electroacoustic composer.")
+		meta(itemprop="image", content="http://daily.redbullmusicacademy.com/specials/2015-eliane-radigue-feature/images/eliane-arp.jpg")
 
-		meta(name="description", content="XXXXXXXXXXX")
+		meta(name="description", content="An in-depth look at the music of the early electroacoustic composer.")
 
 		//-FB
 		meta(property="og:title", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | Red Bull Music Academy Daily")
 		meta(property="og:description", content="An in-depth look at the music of the early electroacoustic composer.")
 		meta(property="og:type", content="article")
-		meta(property="og:url", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/")
-		meta(property="og:image", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+		meta(property="og:url", content="http://daily.redbullmusicacademy.com/specials/2015-eliane-radigue-feature/")
+		meta(property="og:image", content="http://daily.redbullmusicacademy.com/specials/2015-eliane-radigue-feature/images/eliane-arp.jpg")
 		meta(property="og:site_name", content="Red Bull Music Academy Daily")
 		meta(property="fb:admins", content="100006789941377")
 
@@ -31,7 +31,7 @@ html(lang="en")
 		meta(name="twitter:title", content="Éliane Radigue: The Mysterious Power Of The Infinitesimal | RBMA Daily")
 		meta(name="twitter:description", content="An in-depth look at the music of the electroacoustic composer")
 		meta(name="twitter:creator", content="@rbma")
-		meta(name="twitter:image:src", content="http://daily.redbullmusicacademy.com/specials/eliane-radigue/images/eliane-arp.jpg")
+		meta(name="twitter:image:src", content="http://daily.redbullmusicacademy.com/specials/2015-eliane-radigue-feature/images/eliane-arp.jpg")
 
 
 		link(rel="author", href="https://plus.google.com/+RBMA/posts")
@@ -71,7 +71,7 @@ html(lang="en")
 			.body-container
 				.title
 					.title-inner
-						h1 Éliane Radigue: Modulations in Chiaroscuro
+						h1 Éliane Radigue: The Mysterious Power Of The Infinitesimal
 						p <span class="credit">Story by: </span> <a href="http://daily.redbullmusicacademy.com/author/julien-becourt">Julien Bécourt</a>
 
 				.main
@@ -223,6 +223,7 @@ html(lang="en")
 
 					p.
 						That spirit is, as Radigue puts it, an effort to access the “mysterious power of the infinitesimal” – the throughline to a remarkable oeuvre that is already being rediscovered and played by new generations. In a career that now spans more than half a century, her ascetic rigor and sense of the absolute have left a significant imprint on experimental music that will continue to reverberate into the future.
+
 
 					p.
 						<em>The author would like to thank Julien Sirjacq, Manu Holterbach and Maxime Guitton for their help with this piece.</em>
